Fixed grids for projects on Tablet View
I'm gonna push this before I start mucking up my code again.

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 
 body {
   background-color: #2E2E3A;
+}
+
+.appWrapper {
+  position:relative;
   overflow-x: hidden;
   width: 100vw;
 }
@@ -442,12 +446,7 @@ h4 {
 }
 
 .arrowContain {
-  position: absolute;
-  bottom: 4vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center
+  margin-top: 2em;
 }
 
 .arrow {
@@ -480,10 +479,10 @@ h4 {
     }
 }
 
-@media only screen and (min-width: 809px) {
+@media only screen and (min-width: 767px) {
   .splashBackground {
     height: fit-content;
-    padding: 3em 0 1em 0;
+    padding: 2em 0 2em 0;
   }
 
   .splashContain {
@@ -649,10 +648,9 @@ h4 {
 
 .skillDetails {
   padding-top: .8em;
-  margin-left: 5vw;
 }
 
-@media screen and (min-width: 809px) {
+@media screen and (min-width: 767px) {
   .skillListContent {
     max-width: none;
   }
@@ -668,13 +666,7 @@ h4 {
     grid-column: 2;
   }
 
-  .skillName {
-    font-size: 2em;
-    font-style: italic;
-  }
-
   .skillDetails {
-    margin-left: 5vw;
   }
 
   .coinContain {
@@ -1374,7 +1366,8 @@ h4 {
   }
 }
 
-@media screen and (min-width: 809px){
+@media screen and (min-width: 767px){
+
   .projectViewContain{
     width: 90vw;
     padding: 5vw;
@@ -1382,6 +1375,15 @@ h4 {
     grid-template-columns: 42.5vw 42.5vw;
     grid-column-gap: 5vw;
     grid-template-rows: auto;
+  }
+
+  .projectViewContainAlt .projectDetailContain {
+    grid-column: 2;
+  }
+
+  .projectViewContainAlt .carouselContainer {
+    grid-column: 1;
+    grid-row: 1;
   }
 
   .projectDetailContain {
@@ -1420,15 +1422,6 @@ h4 {
   .projectImgMain,
   .projectBody {
     grid-column: 2
-  }
-
-  .projectImgContain {
-  }
-
-  .projectImg {
-  }
-
-  .projectAsset {
   }
 
   .projectBody {
